# observer-design-pattern-python

./: LICENSE  README.md  pyproject.toml
src/: main.py  main.yaml
src/config/: logger.py  parser.py  settings.py  yaml_parser.py
src/core/: observer.py
src/data/: uk_dummy_addresses.json
src/model/: models.py
tests/integration_tests/: test_main.py
tests/unit_tests/: test_models.py  test_observer.py  test_parser.py
