[tool.poetry]
name = "observer-design-pattern-python"
version = "0.1.0"
description = ""
authors = ["BashirAli <thebashtm@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.12"
pendulum = "==3.0.0"
pydantic = {version = "==2.7.4", extras = ["email"]}
pydantic-settings = "==2.0.3"
PyYAML = "==5.2"

[tool.poetry.dev-dependencies]
pytest = "*"
requests = "*"
httpx = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
